// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matchAllPlus > works when direct match 2`] = `
[
  {
    "_sourceString": "foozball",
    "end": 8,
    "match": true,
    "start": 0,
  },
]
`;

exports[`matchAllPlus > works when match 2`] = `
[
  {
    "_sourceString": "baseball  foozball",
    "end": 10,
    "match": false,
    "start": 0,
  },
  {
    "_sourceString": "baseball  foozball",
    "end": 18,
    "match": true,
    "start": 10,
  },
]
`;

exports[`matchAllPlus > works when no match 2`] = `
[
  {
    "_sourceString": "baseball  boozball",
    "end": 18,
    "match": false,
    "start": 0,
  },
]
`;
